@@ -330,7 +330,7 @@ class IntegerFieldTest(TestCase):
         form = self.F(DummyPostData(a=[], b=['']))
         self.assertEqual(form.a.data, None)
         self.assertEqual(form.a.raw_data, [])
-        self.assertEqual(form.b.data, 48)
+        self.assertEqual(form.b.data, None)
         self.assertEqual(form.b.raw_data, [''])
         self.assert_(not form.validate())
         self.assertEqual(len(form.b.process_errors), 1)
@@ -351,7 +351,7 @@ class DecimalFieldTest(TestCase):
         self.assertEqual(form.a._value(), u'2.10')
         self.assert_(form.validate())
         form = F(DummyPostData(a='2,1'), a=Decimal(5))
-        self.assertEqual(form.a.data, Decimal(5))
+        self.assertEqual(form.a.data, None)
         self.assertEqual(form.a.raw_data, ['2,1'])
         self.assert_(not form.validate())
 
@@ -385,7 +385,7 @@ class FloatFieldTest(TestCase):
         self.assert_(form.b.validate(form))
         form = self.F(DummyPostData(a=[], b=['']))
         self.assertEqual(form.a.data, None)
-        self.assertEqual(form.b.data, 48.0)
+        self.assertEqual(form.b.data, None)
         self.assertEqual(form.b.raw_data, [u''])
         self.assert_(not form.validate())
         self.assertEqual(len(form.b.process_errors), 1)
